--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@stomp/stompjs": "^7.2.0",
+    "@theme-toggles/react": "^4.1.0",
     "@types/sockjs-client": "^1.5.4",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
