--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@theme-toggles/react": "^4.1.0",
     "@types/sockjs-client": "^1.5.4",
     "axios": "^1.12.2",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -50,6 +51,7 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "katex": "^0.16.27",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.16",
     "next": "15.5.3",
@@ -59,6 +61,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-katex": "^3.1.0",
     "react-resizable-panels": "^3.0.6",
     "rechart": "^0.0.1",
     "recharts": "^2.15.4",
