--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/quiz/multiPlayerQuestion/QuestionComponents"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/quiz/multiPlayerQuestion/QuestionComponents","types/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
